--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -41,37 +41,15 @@
       "metadata": {
         "id": "qVGvdWARdnSQ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "f39e76df-9515-4fb1-dd9f-6f4724b8ab93"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "# get the gene file.\n",
         "!wget 'http://nekrut.github.io/BMMB554/yeast_genes.txt'"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2019-01-19 04:56:06--  http://nekrut.github.io/BMMB554/yeast_genes.txt\n",
-            "Resolving nekrut.github.io (nekrut.github.io)... 185.199.108.153, 185.199.110.153, 185.199.111.153, ...\n",
-            "Connecting to nekrut.github.io (nekrut.github.io)|185.199.108.153|:80... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 236742 (231K) [text/plain]\n",
-            "Saving to: ‘yeast_genes.txt’\n",
-            "\n",
-            "\ryeast_genes.txt       0%[                    ]       0  --.-KB/s               \ryeast_genes.txt     100%[===================>] 231.19K  --.-KB/s    in 0.05s   \n",
-            "\n",
-            "2019-01-19 04:56:06 (4.36 MB/s) - ‘yeast_genes.txt’ saved [236742/236742]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -96,14 +74,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3a039a96-4aff-48f5-82a8-42c7d9e1b1f4"
+        "outputId": "963fa5fd-85f3-43d1-bf7b-6d4e2e0c8272"
       },
       "cell_type": "code",
       "source": [
         "# see how many elements in the list, which equals to the lines/genes in the file.\n",
         "len(genes)"
       ],
-      "execution_count": 8,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +93,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 48
         }
       ]
     },
@@ -129,19 +107,29 @@
       "source": [
         "## calculate gene lengths and store in a dict.\n",
         "## calculate how many genes are on ChrX\n",
-        "count = 0\n",
+        "count_chrX = 0\n",
+        "count_chrI = 0\n",
+        "count_chrII = 0\n",
         "genes = genes[1:]\n",
-        "geneLengths={}\n",
+        "geneLengths={}  #open a dict to store gene length information\n",
         "for gene in genes:\n",
         "  genInfo = gene.rstrip().split('\\t')\n",
         "  gen = genInfo[1]\n",
         "  genChr = genInfo[2]\n",
-        "  genStart = genInfo[3]\n",
-        "  genEnd = genInfo[4]\n",
-        "  genLen = int(genEnd) - int(genStart)\n",
+        "  genStart = genInfo[-2]\n",
+        "  genEnd = genInfo[-1]\n",
+        "  genLen = abs(int(genEnd) - int(genStart))\n",
         "  geneLengths[gen]=genLen\n",
         "  if genChr == 'chrX':\n",
-        "    count += 1\n",
+        "    count_chrX += 1\n",
+        "  \n",
+        "  if genChr == 'chrI':\n",
+        "    if int(genEnd) - int(genStart) > 0:\n",
+        "      count_chrI += 1\n",
+        "  \n",
+        "  if genChr == 'chrII':\n",
+        "    if int(genEnd) - int(genStart) < 0:\n",
+        "      count_chrII += 1\n",
         "  \n"
       ],
       "execution_count": 0,
@@ -155,13 +143,66 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "99a50131-c030-4cc7-f7ac-131a47decec3"
+        "outputId": "346e52fd-bc0f-4138-d1a4-1594a9855c9c"
       },
       "cell_type": "code",
       "source": [
-        "print(count)"
+        "# genes on chromosom X.\n",
+        "print(count_chrX)"
       ],
-      "execution_count": 34,
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "438\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "diSqpmz88Ofo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8a2d1114-9822-48d7-e41b-7ad8fea8b98f"
+      },
+      "cell_type": "code",
+      "source": [
+        "# chrI gene on + strand.\n",
+        "print(count_chrI)"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "131\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "cc0QcocD8SQ-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e267d777-d1d9-4871-ae87-d7b8dd70c612"
+      },
+      "cell_type": "code",
+      "source": [
+        "# chrII gene on - strand.\n",
+        "print(count_chrII)"
+      ],
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,14 +221,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c4bb1be4-7915-4759-fb43-4b2a424c97cf"
+        "outputId": "bdd62e4a-4e41-492a-ee62-d5ee21af3d3d"
       },
       "cell_type": "code",
       "source": [
         "# get the gene with the longest gene length.\n",
         "max(geneLengths, key=geneLengths.get)"
       ],
-      "execution_count": 27,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +240,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 53
         }
       ]
     },
@@ -211,61 +252,41 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d9a6336d-5eec-47ca-9045-cd406fd2ad51"
+        "outputId": "05ef7f1d-ea70-4739-81dd-547fb32d291a"
       },
       "cell_type": "code",
       "source": [
         "# get the shortest gene.\n",
         "min(geneLengths, key = geneLengths.get)"
       ],
-      "execution_count": 29,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'ZOD1'"
+              "'9S_RRNA_1'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 54
         }
       ]
     },
     {
       "metadata": {
-        "id": "1kxEoMBWkSCB",
+        "id": "w-6Z0UJ7AeAF",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "34f63993-7997-48c7-a39d-e9d88922ceed"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "genes[1:5]"
+        "sorted(geneLengths.items(), key=lambda kv: kv[1]) # check the result."
       ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['ETS1-2\\tETS1-2\\tchrXII\\t466870\\t467569\\n',\n",
-              " 'ETS2-1\\tETS2-1\\tchrXII\\t451575\\t451785\\n',\n",
-              " 'ETS2-2\\tETS2-2\\tchrXII\\t460712\\t460922\\n',\n",
-              " 'HRA1\\tHRA1\\tchrI\\t99305\\t99868\\n']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 32
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
